fix: added a small gap in between images

--- a/public/css/home_page.css
+++ b/public/css/home_page.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: 10px;
 }
 
 /* Container for the game card */
